RM: Changes title of HTML file

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Simply moving title</title>
+	<title>A very difficult website branchy</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
