--- a/simple.html
+++ b/simple.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <!-- This is my copyright bhaiyya -->
+<!-- Adding changes before rebasing conflicting bhanginess -->
 <head>
 	<title>Bhai master ki website par changes kiye hainy</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
