feature branch - adding some troubling times to simple.html

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This is my copyright bhaiyya -->
-<!-- Second round of changes from master branchie -->
+<!-- These changes are from the feature branchie now -->
 <head>
 	<title>Bhai master ki website par changes kiye hainy</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,11 +16,10 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Bhanginess hai bhaiyya
+			Interessant text 1
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2020: A space Odyssey</p>
 	</footer>
 </body>
 </html>
