master branch se conflicting changes are brewing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This is my copyright bhaiyya -->
-<!-- Adding changes before rebasing conflicting bhanginess -->
+<!-- Second round of changes from master branchie -->
 <head>
 	<title>Bhai master ki website par changes kiye hainy</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
@@ -16,11 +16,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Interessant text 1
+			Bhanginess hai bhaiyya
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2020</p>
+		<p>&copy; Company 2020: A space Odyssey</p>
 	</footer>
 </body>
 </html>
