Adding changes theek se is baar after rebasing

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- This is my copyright bhaiyya -->
-<!-- These changes are from the feature branchie now -->
+<!-- Nikaal do saare issues ab: bigtrouble branch mein hoon mein -->
 <head>
 	<title>Bhai master ki website par changes kiye hainy</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
